# stellAIverse-contracts

./: AUDIT_CHECKLIST.md  AUDIT_IMPLEMENTATION_STATUS.md  AUDIT_LOGGING_IMPLEMENTATION.md  CI_TEST_GUIDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  HARDENING_SUMMARY.md  PR_MESSAGE.md  RUST_SETUP.md  SECURITY_BEST_PRACTICES.md  SECURITY_ISSUES_AND_FIXES.md  SECURITY_QUICK_REFERENCE.md  run-ci-tests.sh  setup-rust-path.ps1
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/agent-nft/: Cargo.toml
contracts/agent-nft/src/: lib.rs  test.rs
contracts/agent-token/: Cargo.toml
contracts/evolution/: Cargo.toml
contracts/evolution/src/: attestation_tests.rs  evolution_history.rs  lib.rs  test.rs
contracts/evolution/test_snapshots/test/: test_evolution_history_recording.1.json
contracts/execution-hub/: Cargo.toml
contracts/execution-hub/src/: lib.rs
contracts/execution-hub/test_snapshots/test/: test_admin_transfer.1.json  (+7 more)
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs
contracts/governance/: Cargo.toml  README.md
contracts/governance/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: atomic.rs  integration_tests.rs  lib.rs  manager.rs  mod.rs  repository.rs  storage.rs  test_approval.rs  test_dynamic_fees.rs  test_lease.rs  types.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs  tests.rs  testutils.rs  types.rs
contracts/transaction-coordinator/: Cargo.toml
contracts/transaction-coordinator/src/: integration_test.rs  lib.rs  test.rs  workflows.rs
lib/: Cargo.toml
lib/src/: atomic.rs  audit.rs  audit_helpers.rs  audit_tests.rs  errors.rs  lib.rs  proxy.rs  types.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: attestation_tests.rs
