[package]
name = "stellai_lib"
version = "0.1.0"
description = "Shared library for StellAIverse contracts"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
